# 2DplanningLab-demo

./: .gitignore  README.md
.github/: CODEOWNERS
maps/: map_16x32_indoor.txt  map_5x5_simple.txt
planner/: CMakeLists.txt
planner/include/: a_star.h  agent.h  common_utils.h  planner_base.h  search_base.h
planner/network/: position.grpc.pb.cc  position.grpc.pb.h  position.pb.cc  position.pb.h  state_message.grpc.pb.cc  state_message.grpc.pb.h  state_message.pb.cc  state_message.pb.h
planner/src/: a_star.cc  agent.cc  common_utils.cc  planner_base.cc  robot_server.cc  search_base.cc
platform/network/: position_pb2.py  position_pb2_grpc.py  state_message_pb2.py  state_message_pb2_grpc.py
platform/src/: agent_service.py  agents.py  llm_command.py  main.py  map_16x32_indoor.txt  map_tiling.py  old_services.py  run_platform.py  simulation_platform.py
platform/utils/: agent_service.py  helpers.py  map_message_helpers.py  potential_field.py
proto_files/: README.md  position.proto  state_message.proto
resources/assets/: README.md
resources/examples/: README.md
resources/map_info/: house.yaml
